fix filter on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -272,6 +272,9 @@
             &.active{
                 background: #5da5d8;
             }
+            &.visible{
+                visibility: hidden;
+            }
         }
     }
     .filter_sort{
